// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapTreeViewController onRenderMapChanged should clone new map before updating viewModel.rootNode to prevent unwanted changes in original map 1`] = `
Object {
  "attributes": Object {},
  "children": Array [
    Object {
      "attributes": Object {},
      "children": Array [],
      "isExcluded": false,
      "isFlattened": false,
      "name": "Folder1",
      "type": "Folder",
    },
    Object {
      "attributes": Object {},
      "children": Array [],
      "isExcluded": false,
      "isFlattened": false,
      "name": "Folder2",
      "type": "Folder",
    },
    Object {
      "attributes": Object {},
      "children": Array [
        Object {
          "attributes": Object {
            "functions": 100,
            "mcc": 100,
            "rloc": 30,
          },
          "isExcluded": false,
          "isFlattened": false,
          "name": "small leaf",
          "type": "File",
        },
      ],
      "isExcluded": false,
      "isFlattened": false,
      "name": "Folder3",
      "type": "Folder",
    },
    Object {
      "attributes": Object {
        "functions": 10,
        "mcc": 1,
        "rloc": 100,
      },
      "isExcluded": false,
      "isFlattened": false,
      "link": "http://www.google.de",
      "name": "big leaf",
      "type": "File",
    },
  ],
  "isExcluded": false,
  "isFlattened": false,
  "name": "root",
  "type": "Folder",
}
`;

exports[`MapTreeViewController onRenderMapChanged should update viewModel.rootNode after timeout and sort 1`] = `
Object {
  "attributes": Object {
    "mcc": 111,
    "rloc": 200,
  },
  "children": Array [
    Object {
      "attributes": Object {
        "mcc": 110,
        "rloc": 100,
      },
      "children": Array [
        Object {
          "attributes": Object {
            "functions": 1000,
            "mcc": 10,
            "rloc": 70,
          },
          "edgeAttributes": Object {
            "average_commits": Object {
              "incoming": 0,
              "outgoing": 0,
            },
            "pairing_rate": Object {
              "incoming": 0,
              "outgoing": 0,
            },
          },
          "id": 4,
          "isExcluded": false,
          "isFlattened": false,
          "name": "other small leaf",
          "path": "/root/Parent Leaf/other small leaf",
          "type": "File",
        },
        Object {
          "attributes": Object {
            "functions": 100,
            "mcc": 100,
            "rloc": 30,
          },
          "edgeAttributes": Object {
            "average_commits": Object {
              "incoming": 0,
              "outgoing": 0,
            },
            "pairing_rate": Object {
              "incoming": 0,
              "outgoing": 0,
            },
          },
          "id": 3,
          "isExcluded": false,
          "isFlattened": false,
          "name": "small leaf",
          "path": "/root/Parent Leaf/small leaf",
          "type": "File",
        },
      ],
      "descendants": 2,
      "edgeAttributes": Object {
        "average_commits": Object {
          "incoming": 0,
          "outgoing": 0,
        },
        "pairing_rate": Object {
          "incoming": 0,
          "outgoing": 0,
        },
      },
      "id": 2,
      "isExcluded": false,
      "isFlattened": false,
      "name": "Parent Leaf",
      "path": "/root/Parent Leaf",
      "type": "Folder",
    },
    Object {
      "attributes": Object {
        "functions": 10,
        "mcc": 1,
        "rloc": 100,
      },
      "edgeAttributes": Object {
        "average_commits": Object {
          "incoming": 0,
          "outgoing": 0,
        },
        "pairing_rate": Object {
          "incoming": 0,
          "outgoing": 0,
        },
      },
      "id": 1,
      "isExcluded": false,
      "isFlattened": false,
      "link": "http://www.google.de",
      "name": "big leaf",
      "path": "/root/big leaf",
      "type": "File",
    },
  ],
  "descendants": 3,
  "edgeAttributes": Object {
    "average_commits": Object {
      "incoming": 0,
      "outgoing": 0,
    },
    "pairing_rate": Object {
      "incoming": 0,
      "outgoing": 0,
    },
  },
  "id": 0,
  "isExcluded": false,
  "isFlattened": false,
  "name": "root",
  "path": "/root",
  "type": "Folder",
}
`;

exports[`MapTreeViewController onSortingOptionChanged should sort folder structure according to name 1`] = `
Object {
  "attributes": Object {
    "mcc": 111,
    "rloc": 200,
  },
  "children": Array [
    Object {
      "attributes": Object {
        "mcc": 110,
        "rloc": 100,
      },
      "children": Array [
        Object {
          "attributes": Object {
            "functions": 1000,
            "mcc": 10,
            "rloc": 70,
          },
          "edgeAttributes": Object {
            "average_commits": Object {
              "incoming": 0,
              "outgoing": 0,
            },
            "pairing_rate": Object {
              "incoming": 0,
              "outgoing": 0,
            },
          },
          "id": 4,
          "isExcluded": false,
          "isFlattened": false,
          "name": "other small leaf",
          "path": "/root/Parent Leaf/other small leaf",
          "type": "File",
        },
        Object {
          "attributes": Object {
            "functions": 100,
            "mcc": 100,
            "rloc": 30,
          },
          "edgeAttributes": Object {
            "average_commits": Object {
              "incoming": 0,
              "outgoing": 0,
            },
            "pairing_rate": Object {
              "incoming": 0,
              "outgoing": 0,
            },
          },
          "id": 3,
          "isExcluded": false,
          "isFlattened": false,
          "name": "small leaf",
          "path": "/root/Parent Leaf/small leaf",
          "type": "File",
        },
      ],
      "descendants": 2,
      "edgeAttributes": Object {
        "average_commits": Object {
          "incoming": 0,
          "outgoing": 0,
        },
        "pairing_rate": Object {
          "incoming": 0,
          "outgoing": 0,
        },
      },
      "id": 2,
      "isExcluded": false,
      "isFlattened": false,
      "name": "Parent Leaf",
      "path": "/root/Parent Leaf",
      "type": "Folder",
    },
    Object {
      "attributes": Object {
        "functions": 10,
        "mcc": 1,
        "rloc": 100,
      },
      "edgeAttributes": Object {
        "average_commits": Object {
          "incoming": 0,
          "outgoing": 0,
        },
        "pairing_rate": Object {
          "incoming": 0,
          "outgoing": 0,
        },
      },
      "id": 1,
      "isExcluded": false,
      "isFlattened": false,
      "link": "http://www.google.de",
      "name": "big leaf",
      "path": "/root/big leaf",
      "type": "File",
    },
  ],
  "descendants": 3,
  "edgeAttributes": Object {
    "average_commits": Object {
      "incoming": 0,
      "outgoing": 0,
    },
    "pairing_rate": Object {
      "incoming": 0,
      "outgoing": 0,
    },
  },
  "id": 0,
  "isExcluded": false,
  "isFlattened": false,
  "name": "root",
  "path": "/root",
  "type": "Folder",
}
`;

exports[`MapTreeViewController onSortingOptionChanged should sort folder structure according to number of files 1`] = `
Object {
  "attributes": Object {
    "mcc": 111,
    "rloc": 200,
  },
  "children": Array [
    Object {
      "attributes": Object {
        "mcc": 110,
        "rloc": 100,
      },
      "children": Array [
        Object {
          "attributes": Object {
            "functions": 100,
            "mcc": 100,
            "rloc": 30,
          },
          "edgeAttributes": Object {
            "average_commits": Object {
              "incoming": 0,
              "outgoing": 0,
            },
            "pairing_rate": Object {
              "incoming": 0,
              "outgoing": 0,
            },
          },
          "id": 3,
          "isExcluded": false,
          "isFlattened": false,
          "name": "small leaf",
          "path": "/root/Parent Leaf/small leaf",
          "type": "File",
        },
        Object {
          "attributes": Object {
            "functions": 1000,
            "mcc": 10,
            "rloc": 70,
          },
          "edgeAttributes": Object {
            "average_commits": Object {
              "incoming": 0,
              "outgoing": 0,
            },
            "pairing_rate": Object {
              "incoming": 0,
              "outgoing": 0,
            },
          },
          "id": 4,
          "isExcluded": false,
          "isFlattened": false,
          "name": "other small leaf",
          "path": "/root/Parent Leaf/other small leaf",
          "type": "File",
        },
      ],
      "descendants": 2,
      "edgeAttributes": Object {
        "average_commits": Object {
          "incoming": 0,
          "outgoing": 0,
        },
        "pairing_rate": Object {
          "incoming": 0,
          "outgoing": 0,
        },
      },
      "id": 2,
      "isExcluded": false,
      "isFlattened": false,
      "name": "Parent Leaf",
      "path": "/root/Parent Leaf",
      "type": "Folder",
    },
    Object {
      "attributes": Object {
        "functions": 10,
        "mcc": 1,
        "rloc": 100,
      },
      "edgeAttributes": Object {
        "average_commits": Object {
          "incoming": 0,
          "outgoing": 0,
        },
        "pairing_rate": Object {
          "incoming": 0,
          "outgoing": 0,
        },
      },
      "id": 1,
      "isExcluded": false,
      "isFlattened": false,
      "link": "http://www.google.de",
      "name": "big leaf",
      "path": "/root/big leaf",
      "type": "File",
    },
  ],
  "descendants": 3,
  "edgeAttributes": Object {
    "average_commits": Object {
      "incoming": 0,
      "outgoing": 0,
    },
    "pairing_rate": Object {
      "incoming": 0,
      "outgoing": 0,
    },
  },
  "id": 0,
  "isExcluded": false,
  "isFlattened": false,
  "name": "root",
  "path": "/root",
  "type": "Folder",
}
`;

exports[`MapTreeViewController onSortingOrderAscendingChanged should reverse the sorting order 1`] = `
Object {
  "attributes": Object {
    "mcc": 111,
    "rloc": 200,
  },
  "children": Array [
    Object {
      "attributes": Object {
        "mcc": 110,
        "rloc": 100,
      },
      "children": Array [
        Object {
          "attributes": Object {
            "functions": 1000,
            "mcc": 10,
            "rloc": 70,
          },
          "edgeAttributes": Object {
            "average_commits": Object {
              "incoming": 0,
              "outgoing": 0,
            },
            "pairing_rate": Object {
              "incoming": 0,
              "outgoing": 0,
            },
          },
          "id": 4,
          "isExcluded": false,
          "isFlattened": false,
          "name": "other small leaf",
          "path": "/root/Parent Leaf/other small leaf",
          "type": "File",
        },
        Object {
          "attributes": Object {
            "functions": 100,
            "mcc": 100,
            "rloc": 30,
          },
          "edgeAttributes": Object {
            "average_commits": Object {
              "incoming": 0,
              "outgoing": 0,
            },
            "pairing_rate": Object {
              "incoming": 0,
              "outgoing": 0,
            },
          },
          "id": 3,
          "isExcluded": false,
          "isFlattened": false,
          "name": "small leaf",
          "path": "/root/Parent Leaf/small leaf",
          "type": "File",
        },
      ],
      "descendants": 2,
      "edgeAttributes": Object {
        "average_commits": Object {
          "incoming": 0,
          "outgoing": 0,
        },
        "pairing_rate": Object {
          "incoming": 0,
          "outgoing": 0,
        },
      },
      "id": 2,
      "isExcluded": false,
      "isFlattened": false,
      "name": "Parent Leaf",
      "path": "/root/Parent Leaf",
      "type": "Folder",
    },
    Object {
      "attributes": Object {
        "functions": 10,
        "mcc": 1,
        "rloc": 100,
      },
      "edgeAttributes": Object {
        "average_commits": Object {
          "incoming": 0,
          "outgoing": 0,
        },
        "pairing_rate": Object {
          "incoming": 0,
          "outgoing": 0,
        },
      },
      "id": 1,
      "isExcluded": false,
      "isFlattened": false,
      "link": "http://www.google.de",
      "name": "big leaf",
      "path": "/root/big leaf",
      "type": "File",
    },
  ],
  "descendants": 3,
  "edgeAttributes": Object {
    "average_commits": Object {
      "incoming": 0,
      "outgoing": 0,
    },
    "pairing_rate": Object {
      "incoming": 0,
      "outgoing": 0,
    },
  },
  "id": 0,
  "isExcluded": false,
  "isFlattened": false,
  "name": "root",
  "path": "/root",
  "type": "Folder",
}
`;
